<resources>
    <string name="app_name">LoginDiBensinan</string>
    <string name="rx_email">Email</string>
    <string name="rx_password">Password</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_update">Update</string>
    <string name="km_lg_butuh">Lagi Butuh DiBensinan?</string>
    <string name="halo_om">Halo, Kak</string>
    <string name="jdl_pesan">Halaman Pemesanan</string>
    <string name="jns_bensin">Jenis Bensin</string>
    <string name="nama_user_pesan">Nama</string>
    <string name="no_hp_user_pesan">No WA</string>
    <string name="jml_bensin_pesan">Jumlah Bensin (dalam Liter)</string>
    <string name="btn_kirim">Kirim</string>
    <string name="fl_loc">Lokasi</string>
    <string name="nama_mitra_pesan">Nama Mitra</string>
    <string name="pesan_kasana">Pergi ke Pesan</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>